syntax = "proto3";

package proto.v1;

option go_package = "github.com/go-training/proto-connect-demo/gen/proto/v1;v1";

service PingService {
  rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
  string data = 1;
}

message PingResponse {
  string data = 1;
}
